--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,15 @@
-aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
-aiosignal==1.3.2
-attrs==25.3.0
-certifi==2025.4.26
-cffi==1.17.1
-charset-normalizer==3.4.2
-contourpy==1.3.2
-cycler==0.12.1
-Cython==3.0.12
 datasets==3.5.1
-dcor==0.6
-dill==0.3.8
 factor_analyzer==0.5.1
-fdasrsf==2.6.1
-filelock==3.18.0
-findiff==0.12.1
-fonttools==4.57.0
-frozenlist==1.6.0
-fsspec==2025.3.0
-huggingface-hub==0.30.2
-idna==3.10
-joblib==1.4.2
-kiwisolver==1.4.8
-lazy_loader==0.4
-llvmlite==0.44.0
-matplotlib==3.10.1
-mpmath==1.3.0
-multidict==6.4.3
-multimethod==2.0
-multiprocess==0.70.16
-numba==0.61.2
-numpy==2.2.5
-packaging==25.0
+matplotlib==3.10.3
+numpy==2.2.6
+optuna==4.3.0
 pandas==2.2.3
-patsy==1.0.1
-pillow==11.2.1
-propcache==0.3.1
-pyarrow==20.0.0
-pycparser==2.22
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
-pytz==2025.2
-PyYAML==6.0.2
-rdata==0.11.2
-requests==2.32.3
-scikit-datasets==0.2.4
-scikit-fda==0.10.1
-scikit-learn==1.6.1
-scipy==1.15.2
-six==1.17.0
-sympy==1.14.0
-threadpoolctl==3.6.0
+peft==0.15.2
+Requests==2.32.3
+scikit_learn==1.6.1
+scipy==1.15.3
+torch==2.5.1+cu121
 tqdm==4.67.1
-tree-sitter==0.21.3
-tree-sitter-languages==1.10.2
-typing_extensions==4.13.2
-tzdata==2025.2
-urllib3==2.4.0
-xarray==2025.4.0
-xxhash==3.5.0
-yarl==1.20.0
+transformers==4.51.3
+tree_sitter==0.21.3
+tree_sitter_languages==1.10.2
