--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,4 +21,4 @@ jobs:
         pip install pylint
     - name: Analysing the code with pylint
       run: |
-        find src/main -name "*.py" | xargs pylint
+        PYTHONPATH=$PYTHONPATH:$(pwd)/src pylint $(find src/main -name "*.py")
